[gd_scene load_steps=15 format=3 uid="uid://b8ddnckcwmp4"]

[ext_resource type="Script" uid="uid://2ofxk2cmq1xb" path="res://features/scenes/title_scene/title_scene.gd" id="1_4lypr"]
[ext_resource type="VideoStream" uid="uid://t4ut164kfti2" path="res://features/scenes/title_scene/concepts/test_finale_video.ogv" id="1_lpngp"]
[ext_resource type="PackedScene" uid="uid://d3xxxj8j6vaox" path="res://components/logo/logo_title.tscn" id="2_lpngp"]
[ext_resource type="PackedScene" uid="uid://btrlk72p3nqxq" path="res://components/menus/pause_menu/pause_menu.tscn" id="2_m61qj"]
[ext_resource type="PackedScene" uid="uid://covjvtab5kgu1" path="res://components/icons/github/icon_github.tscn" id="4_niea6"]
[ext_resource type="PackedScene" uid="uid://btfk8360kky62" path="res://components/icons/discord/icon_discord.tscn" id="5_24pta"]
[ext_resource type="PackedScene" uid="uid://cnh31od46fggr" path="res://components/icons/itchio/icon_itchio.tscn" id="6_4lypr"]
[ext_resource type="Theme" uid="uid://dq5r1pewwfy7y" path="res://components/menus/game_menu/game_menu_theme.tres" id="8_ja7c0"]
[ext_resource type="PackedScene" uid="uid://df848eo5uwric" path="res://components/menus/game_menu/game_menu_button.tscn" id="9_cjqem"]

[sub_resource type="Animation" id="Animation_m0s1u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LogoContainer:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(802.9579, 275)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LogoContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(859, 24)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LogoContainer:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.50264686, 0.50264686)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("IconContainer/IconGithub:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1197, 509)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("IconContainer/IconItchio:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1197, 583)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("IconContainer/IconDiscord:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1197, 650)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("LayerContainer/MenuLayer/MenuContainer/MainMenu:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_niea6"]
resource_name = "start"
length = 20.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LogoContainer:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(8.7, 10.833333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 275), Vector2(802.9579, 275)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LogoContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(10.833333),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(859, 24)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LogoContainer:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(10.833333),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.50264686, 0.50264686)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("IconContainer/IconGithub:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(10.533334, 11.666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1320, 509), Vector2(1197.485, 509)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("IconContainer/IconItchio:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(10.533334, 12.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1320, 583), Vector2(1197.485, 583)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("IconContainer/IconDiscord:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(10.533334, 12.666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1320, 650), Vector2(1197.485, 650)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("LayerContainer/MenuLayer/MenuContainer/MainMenu:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(12, 13.233334),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 216), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_niea6"]
_data = {
&"RESET": SubResource("Animation_m0s1u"),
&"intro": SubResource("Animation_niea6")
}

[sub_resource type="Gradient" id="Gradient_niea6"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_m0s1u"]
gradient = SubResource("Gradient_niea6")

[node name="TitleScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4lypr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_niea6")
}
autoplay = "intro"
speed_scale = 4.0

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 1
offset_right = 1920.0
offset_bottom = 1080.0
scale = Vector2(0.6666653, 0.6666653)
size_flags_horizontal = 4
size_flags_vertical = 4
stream = ExtResource("1_lpngp")
speed_scale = 4.0
autoplay = true

[node name="LogoContainer" type="TextureRect" parent="."]
clip_children = 1
layout_mode = 0
offset_left = 859.0
offset_top = 24.0
offset_right = 1661.9579
offset_bottom = 299.0
scale = Vector2(0.50264686, 0.50264686)
texture = SubResource("GradientTexture2D_m0s1u")
expand_mode = 1

[node name="LogoTitle" parent="LogoContainer" instance=ExtResource("2_lpngp")]
layout_mode = 1
offset_right = 803.0
offset_bottom = 275.0

[node name="IconContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="IconGithub" parent="IconContainer" instance=ExtResource("4_niea6")]
layout_mode = 0
offset_left = 1197.0
offset_top = 509.0
offset_right = 1250.0
offset_bottom = 562.0
mouse_default_cursor_shape = 2
expand_mode = 1

[node name="IconItchio" parent="IconContainer" instance=ExtResource("6_4lypr")]
layout_mode = 0
offset_left = 1197.0
offset_top = 583.0
offset_right = 1250.0
offset_bottom = 636.0
expand_mode = 1

[node name="IconDiscord" parent="IconContainer" instance=ExtResource("5_24pta")]
layout_mode = 0
offset_left = 1197.0
offset_top = 650.0
offset_right = 1250.0
offset_bottom = 703.0
expand_mode = 1

[node name="LayerContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -128.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="MenuLayer" parent="LayerContainer" instance=ExtResource("2_m61qj")]
clip_contents = false
layout_mode = 1

[node name="Reference" parent="LayerContainer/MenuLayer" index="0"]
visible = false

[node name="GameplayMenu" parent="LayerContainer/MenuLayer/MenuContainer" index="2"]
offset_right = 877.0

[node name="TBD 1" parent="LayerContainer/MenuLayer/MenuContainer/GameplayMenu/MarginContainer/ButtonGroup" index="0"]
visible = false
alignment = 2

[node name="TBD 2" parent="LayerContainer/MenuLayer/MenuContainer/GameplayMenu/MarginContainer/ButtonGroup" index="1"]
visible = false

[node name="TBD 3" parent="LayerContainer/MenuLayer/MenuContainer/GameplayMenu/MarginContainer/ButtonGroup" index="2"]
visible = false

[node name="TBD 4" parent="LayerContainer/MenuLayer/MenuContainer/GameplayMenu/MarginContainer/ButtonGroup" index="3"]
visible = false

[node name="Label" type="Label" parent="LayerContainer/MenuLayer/MenuContainer/GameplayMenu/MarginContainer/ButtonGroup" index="4"]
visible = false
layout_mode = 2
theme = ExtResource("8_ja7c0")
text = "Filtro CRT"

[node name="TBD 5" parent="LayerContainer/MenuLayer/MenuContainer/GameplayMenu/MarginContainer/ButtonGroup/Label" instance=ExtResource("9_cjqem")]
visible = false
custom_minimum_size = Vector2(0, 30)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -15.5
offset_right = 0.0
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
text = "TBD 1"
alignment = 2

[node name="CheckBox" type="CheckBox" parent="LayerContainer/MenuLayer/MenuContainer/GameplayMenu/MarginContainer/ButtonGroup/Label"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -13.5
offset_right = -16.0
offset_bottom = 10.5
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("8_ja7c0")

[node name="Label2" type="Label" parent="LayerContainer/MenuLayer/MenuContainer/GameplayMenu/MarginContainer/ButtonGroup" index="5"]
visible = false
layout_mode = 2
theme = ExtResource("8_ja7c0")
text = "Font Size"

[node name="TBD 5" parent="LayerContainer/MenuLayer/MenuContainer/GameplayMenu/MarginContainer/ButtonGroup/Label2" instance=ExtResource("9_cjqem")]
visible = false
custom_minimum_size = Vector2(0, 30)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -15.5
offset_right = 0.0
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
text = "TBD 1"
alignment = 2

[connection signal="gui_input" from="IconContainer/IconGithub" to="." method="_on_icon_github_gui_input"]
[connection signal="gui_input" from="IconContainer/IconItchio" to="." method="_on_icon_itchio_gui_input"]
[connection signal="gui_input" from="IconContainer/IconDiscord" to="." method="_on_icon_discord_gui_input"]
[connection signal="submenu_toggled" from="LayerContainer/MenuLayer/MenuContainer/MainMenu" to="." method="_on_main_menu_submenu_toggled"]

[editable path="LayerContainer/MenuLayer"]
[editable path="LayerContainer/MenuLayer/MenuContainer/MainMenu"]
[editable path="LayerContainer/MenuLayer/MenuContainer/OptionMenu"]
[editable path="LayerContainer/MenuLayer/MenuContainer/GameplayMenu"]
